tests/success/simplification/CaseOfKnown.vix
type Tree a = Leaf a | Fork (Ptr (Tree a)) (Ptr (Tree a))

test = printInt case Leaf 123 of
  Leaf n -> n
  Fork t1 t2 -> 222
