tests/type-error/CircularGlobal.vix
type List a = Nil | Cons a (Ptr (List a))

ones = Ptr (Cons 1 ones)

test = case ones of
  Ptr (Cons 1 (Ptr (Cons 1 (Ptr (Cons 1 _))))) -> printInt 111
  _ -> printInt 222
